--- a/tab1.css
+++ b/tab1.css
@@ -8,8 +8,12 @@
 
 body {
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: #FEFFFB;
 }
 
 .tabs {
