--- a/tab4.css
+++ b/tab4.css
@@ -1,12 +1,12 @@
 
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: white; 
-    display: flex;
-    justify-content: center; 
-    align-items: flex-start; 
-    min-height: 100vh; 
+    background-color: #FEFFFB;
 }
 
 
